hphp/test/zend/good/Zend/tests/ns_036.php.skipif
<?hh
<<__EntryPoint>> function main(): void {
if (!extension_loaded("spl")) die("skip SPL is no available");
}
