hphp/test/zend/bad/ext/phar/tests/phar_get_supportedcomp3.php.skipif
<?php if (!extension_loaded("phar")) die("skip"); ?>
<?php if (!extension_loaded("spl")) die("skip SPL not available"); ?>
<?php if (extension_loaded("bz2")) die("skip bz2 is available"); ?>
<?php if (!extension_loaded("zlib")) die("skip zlib not available"); ?>